src/Assignment 6/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating__c  /  No_of_Feedback__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Admin Webinar</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer Webinar</fullName>
                </value>
                <value>
                    <fullName>Soft Skill Workshop</fullName>
                </value>
                <value>
                    <fullName>Personality Development Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Of_Attendees__c</fullName>
        <label>No Of Attendees</label>
        <summaryForeignKey>Attendee__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Feedback__c</fullName>
        <label>No of Feedback</label>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_SessionDateShouldBeGreaterThanToday</fullName>
        <active>true</active>
        <description>This validation has been created to ensure that session  date can not be less than today.</description>
        <errorConditionFormula>Session_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Please enter a valid date for the Session.</errorMessage>
    </validationRules>
</CustomObject>